--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcBrZ9OC2pPgRSNh10Yrx8",
+      "authorship_tag": "ABX9TyNTBSoE7eMAJCX3cj+rEiMR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         },
         "collapsed": true,
         "id": "7vBhvgP-d0Lu",
-        "outputId": "391be379-6120-45ca-f5e1-52723d1a01b0"
+        "outputId": "5e3f07a7-b529-4ac0-aaf9-ac5ad16e3130"
       },
       "execution_count": 1,
       "outputs": [
@@ -66,7 +66,7 @@
             "Requirement already satisfied: typing-extensions<5,>=4.3.0 in /usr/local/lib/python3.10/dist-packages (from streamlit) (4.12.2)\n",
             "Collecting watchdog<7,>=2.1.5 (from streamlit)\n",
             "  Downloading watchdog-6.0.0-py3-none-manylinux2014_x86_64.whl.metadata (44 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.3/44.3 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.3/44.3 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: gitpython!=3.1.19,<4,>=3.0.7 in /usr/local/lib/python3.10/dist-packages (from streamlit) (3.1.43)\n",
             "Collecting pydeck<1,>=0.8.0b4 (from streamlit)\n",
             "  Downloading pydeck-0.9.1-py2.py3-none-any.whl.metadata (4.1 kB)\n",
@@ -94,12 +94,12 @@
             "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.10/dist-packages (from markdown-it-py>=2.2.0->rich<14,>=10.14.0->streamlit) (0.1.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas<3,>=1.4.0->streamlit) (1.17.0)\n",
             "Downloading streamlit-1.41.1-py2.py3-none-any.whl (9.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.1/9.1 MB\u001b[0m \u001b[31m25.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.1/9.1 MB\u001b[0m \u001b[31m57.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading pyngrok-7.2.2-py3-none-any.whl (22 kB)\n",
             "Downloading pydeck-0.9.1-py2.py3-none-any.whl (6.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m19.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m63.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading watchdog-6.0.0-py3-none-manylinux2014_x86_64.whl (79 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.1/79.1 kB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.1/79.1 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: watchdog, pyngrok, pydeck, streamlit\n",
             "Successfully installed pydeck-0.9.1 pyngrok-7.2.2 streamlit-1.41.1 watchdog-6.0.0\n"
           ]
@@ -116,7 +116,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SCueDgvxbRTp",
-        "outputId": "d47e8226-0743-44c7-a3ab-94ed9691c859"
+        "outputId": "20ff25da-8103-43d8-95f1-1ccb73ee43fc"
       },
       "execution_count": 2,
       "outputs": [
@@ -242,12 +242,12 @@
         "    return recommended\n",
         "\n",
         "# Streamlit UI\n",
-        "st.title('Food Nutrition and Allergen Checker')\n",
+        "st.title('NutriScan')\n",
         "\n",
         "uploaded_file = st.file_uploader(\"Choose an image...\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
         "if uploaded_file is not None:\n",
         "    image = Image.open(uploaded_file)\n",
-        "    st.image(image, caption='Uploaded Image.', use_column_width=True)\n",
+        "    st.image(image, caption='Uploaded Image.', use_container_width=True)\n",
         "\n",
         "    st.write(\"Detecting food item...\")\n",
         "    image_data = uploaded_file.getvalue()  # Get the uploaded image data\n",
@@ -323,15 +323,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M6Zg-7WFvVK8",
-        "outputId": "228ffb67-aa25-4f0b-9699-19465838068b"
+        "outputId": "dc14f9e4-efeb-4023-e669-b5c16c98db3a"
       },
-      "execution_count": 34,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting app.py\n"
+            "Writing app.py\n"
           ]
         }
       ]
@@ -354,18 +354,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IyvdHzQOg2aX",
-        "outputId": "3e2100f0-8188-4e3c-8709-9fbb4a316f85"
+        "outputId": "e7765e4f-a360-4043-d7e4-795201511824"
       },
-      "execution_count": 36,
+      "execution_count": 5,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Streamlit app is running on NgrokTunnel: \"https://e223-35-245-44-255.ngrok-free.app\" -> \"http://localhost:8501\"\n",
+            "Streamlit app is running on NgrokTunnel: \"https://aaac-104-196-252-100.ngrok-free.app\" -> \"http://localhost:8501\"\n",
             "\n",
             "Collecting usage statistics. To deactivate, set browser.gatherUsageStats to false.\n",
             "\u001b[0m\n",
@@ -374,11 +371,10 @@
             "\u001b[0m\n",
             "\u001b[34m  Local URL: \u001b[0m\u001b[1mhttp://localhost:8501\u001b[0m\n",
             "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n",
-            "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://35.245.44.255:8501\u001b[0m\n",
+            "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://104.196.252.100:8501\u001b[0m\n",
             "\u001b[0m\n",
-            "2024-12-29 19:50:15.790 The `use_column_width` parameter has been deprecated and will be removed in a future release. Please utilize the `use_container_width` parameter instead.\n",
             "\u001b[34m  Stopping...\u001b[0m\n",
-            "^C\n"
+            "\u001b[34m  Stopping...\u001b[0m\n"
           ]
         }
       ]
@@ -392,7 +388,7 @@
       "metadata": {
         "id": "Rx-Fd6mwelMv"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     }
   ]
